--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
   ],
   "compilerOptions": {
     "ignoreDeprecations": "5.0",
-    "allowJs": true
+    "allowJs": true,
+    "checkJs": true
   }
 }
