--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
   "compilerOptions": {
     "ignoreDeprecations": "5.0",
     "allowJs": true,
-    "checkJs": true
-  }
+    "checkJs": true,
+    "allowSyntheticDefaultImports": true
+  },
+  "external": [
+    "conf",
+  ]
 }
