--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.348.0",
+    "@aws-sdk/client-dynamodb": "^3.405.0",
+    "@aws-sdk/client-s3": "^3.405.0",
     "@aws-sdk/lib-storage": "^3.348.0",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
