--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.413.0",
     "@aws-sdk/client-dynamodb": "^3.405.0",
-    "@aws-sdk/client-s3": "^3.405.0",
+    "@aws-sdk/client-s3": "^3.413.0",
     "@aws-sdk/lib-storage": "^3.348.0",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
@@ -24,7 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "aws-s3-upload-ash": "^1.1.7",
-    "aws-sdk": "^2.1440.0",
+    "aws-sdk": "^2.1458.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha2",
     "chart.js": "^4.2.1",
