--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/vue3": "^6.1.8",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vueuse/core": "^10.4.1",
     "aws-s3-upload-ash": "^1.1.7",
     "aws-sdk": "^2.1458.0",
     "axios": "^1.3.4",
@@ -35,6 +36,8 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "jspdf": "^2.5.1",
+    "libphonenumber-js": "^1.10.44",
+    "maz-ui": "^3.14.2",
     "mitt": "^3.0.0",
     "pdfmake": "^0.2.7",
     "pinia": "^2.1.3",
